Add authentication to Google Developers Console
I obtained an API key to the Google Developers Console,
and stored it in a yaml file. I encrypted that file with
the ansible-vault tool.

The reason I used ansible-vault for encryption was to make it
easy to eventually deploy the API key on servers using ansible.

I also added a script that writes an ".env" file. Variables defined
in ".env" are loaded by pipenv every time the venv is activated.
Running bin/setup-env.py prompts the user for the required environment
variables.

The ".env" file is not tracked.

--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,13 @@ name = "pypi"
 django = "*"
 pip = "==18.0"
 django-crispy-forms = "*"
+"jinja2" = "*"
 
 [dev-packages]
 pytest = "*"
 selenium = "*"
 black = "*"
+ansible = "*"
 
 [requires]
 python_version = "3.6"
