--- a/configure.yml
+++ b/configure.yml
@@ -1,10 +1,8 @@
 ---
 - hosts: all
   become: yes
-  vars:
-    - app_dir: /apps/bookstorewindow
-    - venv_dir: /apps/bookstorewindow/venv
   vars_files:
+    - vars/main.yml
     - vars/secrets.yml
   tasks:
     - name: Update the system-wide packages
@@ -16,13 +14,7 @@
       apt:
         name: python3-pip
 
-    - name: Install the python packages required by the app in a virtualenv
-      pip:
-        requirements: "{{ app_dir }}/requirements/base.txt"
-        virtualenv: "{{ venv_dir }}"
-
-    - name: Insert the Google API key to the python virtualenv activate script
-      lineinfile:
-        path: "{{ app_dir }}/venv/bin/activate"
-        regexp: '^export GOOGLE_API_KEY='
-        line: 'export GOOGLE_API_KEY={{ google_api_key }}'
+    - include_tasks: create_users_and_groups.yml
+    - include_tasks: setup_django_app.yml
+    - include_tasks: setup_supervisor.yml
+    - include_tasks: setup_nginx.yml
