Update interactions between gunicorn and supervisor
There were a lot of stale variable names from the last time
I used these playbooks. Now they have been updated so that
the webapp can be deployed on a Vagrant VM with a gunicorn
server.

However, I ran into issues with the sqlite.db not being
writable by the application user.

--- a/deploy.yml
+++ b/deploy.yml
@@ -4,6 +4,17 @@
   vars_files:
     - vars/main.yml
     - vars/secrets.yml
+
+  handlers:
+    - name: restart application
+      supervisorctl: name={{ app_name }} state=restarted
+
+    - name: restart nginx
+      service: name=nginx state=restarted enabled=yes
+
+    - name: reload nginx
+      service: name=nginx state=reloaded
+
   tasks:
     - name: Update the system-wide packages
       apt:
@@ -14,7 +25,8 @@
       apt:
         name: python3-pip
 
-    - include_tasks: create_users_and_groups.yml
-    - include_tasks: setup_django_app.yml
-    - include_tasks: setup_supervisor.yml
-    - include_tasks: setup_nginx.yml
+    - include_tasks: tasks/create_users_and_groups.yml
+    - include_tasks: tasks/setup_django_app.yml
+    - include_tasks: tasks/setup_gunicorn.yml
+    - include_tasks: tasks/setup_supervisor.yml
+    - include_tasks: tasks/setup_nginx.yml
