--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: restart application
-  supervisorctl: name={{ application_name }} state=restarted
+  supervisorctl: name={{ app_name }} state=restarted
 
 - name: restart nginx
   service: name=nginx state=restarted enabled=yes
