--- a/tasks/setup_supervisor.yml
+++ b/tasks/setup_supervisor.yml
@@ -1,12 +1,15 @@
 ---
+- name: Install supervisor
+  apt:
+    name: supervisor
 
 - name: Create the Supervisor config file
   template: src=supervisor_config.j2
-            dest=/etc/supervisor/conf.d/{{ application_name }}.conf
+            dest=/etc/supervisor/conf.d/{{ app_name }}.conf
             backup=yes
 
 - name: Re-read the Supervisor config files
-  supervisorctl: name={{ application_name }} state=present
+  supervisorctl: name={{ app_name }} state=present
 
 - name: Restart Supervisor
-  supervisorctl: name={{ application_name }} state=restarted
+  supervisorctl: name={{ app_name }} state=restarted
