--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,12 +6,13 @@ venv_dir: "{{ app_dir }}/venv"
 app_log_dir: "{{ app_dir }}/logs"
 app_log_file: "{{ app_log_dir }}/gunicorn_supervisor.log"
 
+nginx_server_name: "{{ inventory_hostname }}"
 nginx_http_port: 80
 nginx_https_port: 443
 nginx_access_log_file: "{{ app_log_dir }}/nginx_access.log"
 nginx_error_log_file: "{{ app_log_dir }}/nginx_error.log"
 
-gunicorn_user: "{{ application_name }}"
+gunicorn_user: "{{ app_name }}"
 gunicorn_group: webapps
 gunicorn_num_workers: 3
 gunicorn_max_requests: 0
