--- a/tasks/create_users_and_groups.yml
+++ b/tasks/create_users_and_groups.yml
@@ -1,10 +1,20 @@
 ---
 
 - name: Create the application user
-  user: name={{ gunicorn_user }} state=present
+  user:
+    name: "{{ gunicorn_user }}"
+    state: present
+    generate_ssh_key: yes
+    ssh_key_file: .ssh/id_rsa
 
 - name: Create the application group
-  group: name={{ gunicorn_group }} system=yes state=present
+  group:
+    name: "{{ gunicorn_group }}"
+    system: yes
+    state: present
 
 - name: Add the application user to the application group
-  user: name={{ gunicorn_user }} group={{ gunicorn_group }} state=present
+  user:
+    name: "{{ gunicorn_user }}"
+    group: "{{ gunicorn_group }}"
+    state: present
