--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ requests = "==2.21.0"
 gunicorn = "==19.9.0"
 Django = "==2.1.5"
 Jinja2 = "==2.10"
+"psycopg2-binary" = "*"
+pip = "==18.0"
 
 [requires]
 python_version = "3.7"
