--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ betamax = "==0.8.1"
 selenium = "==3.141.0"
 ipython = "==7.2.0"
 black = "==18.9b0"
+model-mommy = "==1.6.0"
 
 [packages]
 django-crispy-forms = "==1.7.2"
