--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ selenium = "==3.141.0"
 ipython = "==7.2.0"
 black = "==18.9b0"
 model-mommy = "==1.6.0"
+ansible = "==2.7.7"
 
 [packages]
 django-crispy-forms = "==1.7.2"
@@ -22,7 +23,7 @@ Jinja2 = "==2.10"
 pip = "==18.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
 
 [pipenv]
 allow_prereleases = true
