--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ requests = "==2.21.0"
 gunicorn = "==19.9.0"
 Django = "==2.1.5"
 Jinja2 = "==2.10"
-"psycopg2-binary" = "*"
+"psycopg2-binary" = "==2.7.7"
 pip = "==18.0"
 
 [requires]
